--- a/chat/package.json
+++ b/chat/package.json
@@ -7,9 +7,11 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
+    "cheeseburger-menu": "0.0.13",
     "react": "^16.13.1",
     "react-chat-widget": "^3.0.5",
     "react-dom": "^16.13.1",
+    "react-hamburger-menu": "^1.2.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
     "react-scroll-to": "^3.0.0-beta.6"
