--- a/chat/package.json
+++ b/chat/package.json
@@ -7,7 +7,8 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
-    "bootstrap": "^4.5.0",
+    "bootstrap": "^4.5.2",
+    "bootstrap-sass": "^3.4.1",
     "cheeseburger-menu": "0.0.13",
     "react": "^16.13.1",
     "react-bootstrap": "^1.3.0",
