--- a/chat/package.json
+++ b/chat/package.json
@@ -10,6 +10,7 @@
     "bootstrap": "^4.5.2",
     "bootstrap-sass": "^3.4.1",
     "cheeseburger-menu": "0.0.13",
+    "prismic-reactjs": "^1.3.2",
     "react": "^16.13.1",
     "react-bootstrap": "^1.3.0",
     "react-chat-widget": "^3.0.5",
@@ -17,7 +18,8 @@
     "react-hamburger-menu": "^1.2.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
-    "react-scroll-to": "^3.0.0-beta.6"
+    "react-scroll-to": "^3.0.0-beta.6",
+    "react-timestamp": "^5.1.0"
   },
   "scripts": {
     "start": "react-scripts start",
