--- a/chat/package.json
+++ b/chat/package.json
@@ -18,6 +18,7 @@
     "react-hamburger-menu": "^1.2.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
+    "react-scroll": "^1.8.1",
     "react-scroll-to": "^3.0.0-beta.6",
     "react-timestamp": "^5.1.0"
   },
